--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -763,6 +763,27 @@
     "Unknown": "Challenge",
     "Weekly": "Weekly Challenge"
   },
+  "ModEffect": {
+    "ArmorCharge": "Armor Charge",
+    "Champion": "Champion",
+    "ChargedWithLight": "Charged with Light",
+    "ClassAbility": "Class Ability",
+    "Dexterity": "Dexterity",
+    "ElementalWell": "Elemental Well",
+    "Finder": "Finder",
+    "Finisher": "Finisher",
+    "Grenade": "Grenade",
+    "Holster": "Holster",
+    "Loader": "Loader",
+    "Orbs": "Orbs",
+    "Reserves": "Reserves",
+    "Resistance": "Resistance",
+    "Scavenger": "Scavenger",
+    "Super": "Super",
+    "Targeting": "Targeting",
+    "Unflinching": "Unflinching",
+    "WarmindCell": "Warmind Cell"
+  },
   "MoveAmount": {
     "Amount": "Amount:"
   },
