Add explanatory tooltips to saved LO Parameters

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -643,6 +643,10 @@
     "ItemErrorSummary_plural": "{{count}} item errors:",
     "ItemLeveling": "Item Leveling",
     "LoadoutName": "Loadout name",
+    "LoadoutParameters": "Loadout Optimizer settings",
+    "LoadoutParametersExotic": "Use {{exoticName}}",
+    "LoadoutParametersQuery": "Items restricted by this search query",
+    "LoadoutParametersStats": "Stat priorities and allowed tier ranges",
     "Loadouts": "Loadouts",
     "MakeRoom": "Make Room for Postmaster",
     "MakeRoomDone": "Finished making room for 1 Postmaster item by moving 1 item off of {{store}}.",
