more explicit LO explanation strings

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -644,9 +644,9 @@
     "ItemLeveling": "Item Leveling",
     "LoadoutName": "Loadout name",
     "LoadoutParameters": "Loadout Optimizer settings",
-    "LoadoutParametersExotic": "Use {{exoticName}}",
-    "LoadoutParametersQuery": "Items restricted by this search query",
-    "LoadoutParametersStats": "Stat priorities and allowed tier ranges",
+    "LoadoutParametersExotic": "Loadout must include this exotic: {{exoticName}}",
+    "LoadoutParametersQuery": "Items must match this search query",
+    "LoadoutParametersStats": "Stat priorities and minimum/maximum stat tiers",
     "Loadouts": "Loadouts",
     "MakeRoom": "Make Room for Postmaster",
     "MakeRoomDone": "Finished making room for 1 Postmaster item by moving 1 item off of {{store}}.",
