make mod placement drawer show armor upgrades + costs

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -739,6 +739,7 @@
     "Undo": "Undo",
     "Unequipped": "Unequipped",
     "Update": "Save Changes",
+    "UpgradeCosts": "Upgrade Costs",
     "VendorsCannotEquip": "You don't have these items. Tap to pick a replacement or click the X to remove:",
     "WeaponsOnly": "Weapons Only"
   },
