--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -645,7 +645,7 @@
     "LoadoutName": "Loadout name",
     "LoadoutParameters": "Loadout Optimizer settings",
     "LoadoutParametersExotic": "Loadout must include this exotic: {{exoticName}}",
-    "LoadoutParametersQuery": "Items must match this search query",
+    "LoadoutParametersQuery": "Items must match this search filter",
     "LoadoutParametersStats": "Stat priorities and minimum/maximum stat tiers",
     "Loadouts": "Loadouts",
     "MakeRoom": "Make Room for Postmaster",
