--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -609,6 +609,7 @@
     "ApplySearch": "Transfer search \"{{query}}\"",
     "ArtifactUnlocks": "Artifact Unlocks",
     "ArtifactUnlocksDesc": "Due to Bungie.net limitations, DIM cannot change your artifact unlocks. You need to unlock these in-game when applying the Loadout.",
+    "ArtifactUnlocksWithSeason": "Artifact Unlocks – S{{seasonNumber}}",
     "BadLoadoutShare": "Unable to load shared loadout",
     "BadLoadoutShareBody": "The loadout you're trying to load is invalid: {{error}}",
     "Before": "Before '{{name}}'",
