Move ingame loadout state into our Redux store

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -387,6 +387,8 @@
   },
   "InGameLoadout": {
     "Applying": "Equipping loadout...",
+    "Deleted": "Loadout Deleted",
+    "DeletedBody": "Cleared the in-game loadout at slot {{index}}",
     "LoadoutSlotNum": "Slot {{index}}"
   },
   "Infusion": {
