--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -736,7 +736,7 @@
     },
     "ShareLoadout": "Share Loadout",
     "ShowModPlacement": "Show Mod Placement",
-    "Snapshot": "Snapshot",
+    "Snapshot": "Save As In-Game Loadout",
     "SocketOverrides": "Changing subclass options",
     "SortByEditTime": "Sort by last edited",
     "SortByName": "Sort by name",
