--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -608,7 +608,7 @@
     "ApplyMods": "Applying mods",
     "ApplySearch": "Transfer search \"{{query}}\"",
     "ArtifactUnlocks": "Artifact Unlocks",
-    "ArtifactUnlocksDesc": "Due to Bungie.net limitations, DIM cannot change your artifact unlocks. You need to unlock these in-game when applying the Loadout.",
+    "ArtifactUnlocksDesc": "Due to Bungie.net limitations, DIM cannot automatically configure your artifact. You need to perform these unlocks in-game before applying the Loadout.",
     "ArtifactUnlocksWithSeason": "Artifact Unlocks – S{{seasonNumber}}",
     "BadLoadoutShare": "Unable to load shared loadout",
     "BadLoadoutShareBody": "The loadout you're trying to load is invalid: {{error}}",
