fill in some game loadout functions

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -388,14 +388,18 @@
   },
   "InGameLoadout": {
     "Applying": "Equipping loadout...",
+    "ClearSlot": "Clear Slot {{index}}",
     "Create": "Create Loadout",
     "CreateTitle": "Create In-Game Loadout From Current Equipment",
     "DeleteFailed": "Failed to delete loadout",
     "Deleted": "Loadout Deleted",
     "DeletedBody": "Cleared the in-game loadout at slot {{index}}",
     "EditFailed": "Failed to update loadout",
+    "EditIdentifiers": "Edit Identifiers",
     "EditTitle": "Edit Loadout Name and Icon",
+    "LoadoutDetails": "Loadout Details",
     "LoadoutSlotNum": "Slot {{index}}",
+    "PrepareEquip": "Prepare Equip",
     "Replace": "Replace Loadout",
     "Save": "Update Loadout",
     "SnapshotFailed": "Failed to snapshot equipped loadout"
@@ -629,6 +633,7 @@
     "Deequip": "De-equipping items from other characters",
     "Delete": "Delete",
     "DeprecatedMods": "Deprecated Mods",
+    "DimLoadouts": "DIM Loadouts",
     "Edit": "Edit Loadout",
     "EditBrief": "Edit",
     "EquipItems": "Equipping items",
@@ -640,6 +645,7 @@
     "FillFromEquipped": "Fill in using equipped",
     "FillFromInventory": "Fill in using non-equipped",
     "FilteredItems": "Filtered Items",
+    "Filters": "Loadout Filters",
     "FindAnother": "Find another {{name}}",
     "FromEquipped": "Equipped",
     "GatherEngrams": "Gather Engrams",
@@ -653,6 +659,7 @@
       "PasteHere": "Paste a loadout link to open the loadout."
     },
     "ImportLoadout": "Import Loadout",
+    "InGameLoadouts": "In-Game Loadouts",
     "ItemErrorSummary": "1 item error:",
     "ItemErrorSummary_plural": "{{count}} item errors:",
     "ItemLeveling": "Item Leveling",
