--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -716,7 +716,9 @@
     "PullFromPostmasterPopupTitle": "Pull from Postmaster",
     "Random": "Random",
     "Randomize": "Randomize Loadout",
+    "RandomizeButton": "Randomize",
     "RandomizePrompt": "Randomize your equipped weapons, armor and ghost?",
+    "RandomizeQueryHint": "Tip: Search for items first to restrict what items can be randomly chosen.",
     "RandomizeSearch": "Randomize from Search",
     "RandomizeSearchPrompt": "Randomize your equipped items from search \"{{query}}\"?",
     "RandomizeWeapons": "Randomize your equipped weapons?",
