--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -55,11 +55,12 @@
     "Weapons": "Weapons"
   },
   "BulkNote": {
-    "Append": "Append note",
-    "Confirm": "Modify Notes",
-    "Remove": "Remove note",
-    "Replace": "Replace note",
-    "Title": "Bulk modify item notes"
+    "Append": "Append to notes / add tags",
+    "Confirm": "Update Notes",
+    "Remove": "Remove from notes / remove tags",
+    "Replace": "Replace notes",
+    "Title": "Change notes for 1 item",
+    "Title_plural": "Change notes for {{count}} items"
   },
   "BungieAlert": {
     "Title": "A message from Bungie:"
@@ -801,7 +802,7 @@
   "MovePopup": {
     "Acquired": "This item is unlocked in collections.",
     "AcquiredMod": "This mod is unlocked in collections.",
-    "AddNote": "Add a note",
+    "AddNote": "Add notes",
     "AddToLoadout": "Loadout",
     "All": "All",
     "CannotCurrentlyRoll": "This perk cannot be rolled on the current version of this item.",
@@ -912,8 +913,7 @@
     "Lock": "Lock",
     "NoItems": "No items selected",
     "NoMobile": "Turn your phone sideways to use the Organizer.",
-    "Note": "Set Note",
-    "NotePrompt": "Note:",
+    "Note": "Set Notes",
     "OpenIn": "Show in Organizer",
     "Organizer": "Organizer",
     "SelectAll": "Select All",
@@ -1109,7 +1109,7 @@
     "AutoBackup": "We've backed up your data to a file in your downloads folder called dim-data.json, just in case.",
     "BackUpFirst": "You MUST back up your data first, before you delete it all. Just in case.",
     "BrowserMayClearData": "The browser may delete this information if you run out of space or don't visit DIM frequently.",
-    "DataIsLocal": "Tag and note data is local only",
+    "DataIsLocal": "Tag and notes data is local only",
     "DeleteAllData": "Delete ALL Data from DIM Sync Servers",
     "DeleteAllDataConfirm": "Are you sure you want to delete ALL your data, for all accounts, from DIM Sync? You can't undo this.",
     "DeleteAllDataLabel": "Wipe DIM Sync Data",
