Cleanup and localize

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -402,14 +402,17 @@
     "ClearSlot": "Clear Slot {{index}}",
     "Create": "Create Loadout",
     "CreateTitle": "Create In-Game Loadout From Current Equipment",
+    "CurrentlyEquipped": "Currently Equipped",
     "DeleteFailed": "Failed to delete loadout",
     "Deleted": "Loadout Deleted",
     "DeletedBody": "Cleared the in-game loadout at slot {{index}}",
     "EditFailed": "Failed to update loadout",
     "EditIdentifiers": "Edit Identifiers",
     "EditTitle": "Edit Loadout Name and Icon",
+    "EquipNotReady": "In-game Equip Not Ready",
+    "EquipReady": "In-game Equip Ready",
     "LoadoutDetails": "Loadout Details",
-    "LoadoutSlotNum": "Slot {{index}}",
+    "MatchingLoadouts": "Matching Loadouts:",
     "PrepareEquip": "Prepare Equip",
     "Replace": "Replace Loadout {{index}}",
     "Save": "Update Loadout",
@@ -667,7 +670,6 @@
     "FillFromEquipped": "Fill in using equipped",
     "FillFromInventory": "Fill in using non-equipped",
     "FilteredItems": "Filtered Items",
-    "Filters": "Loadout Filters",
     "FindAnother": "Find another {{name}}",
     "FromEquipped": "Equipped",
     "GatherEngrams": "Gather Engrams",
