--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1317,6 +1317,7 @@
     "BestRatedTip_plural": "These perks exactly match a weapon roll on your wishlist.",
     "ChoosyVoltron": "choosy_voltron",
     "ChoosyVoltronDescription": "choosy_voltron is an auto-updated collection of PvE and PvP wish list rolls from Mercules904 and pandapaxxy, along with some trash list rolls.",
+    "ChoosyVoltronSelected": "choosy_voltron selected.",
     "Clear": "Clear Wish List",
     "CopiedLine": "Wish List roll copied to clipboard",
     "CopyLine": "Copy Selected Perks as Wish List Roll",
@@ -1334,6 +1335,7 @@
     "UpdateExternalSource": "Update Wish List Source",
     "Voltron": "voltron (default)",
     "VoltronDescription": "voltron is an auto-updated collection of PvE and PvP wish list rolls from across the Destiny community. We ship with this by default.",
+    "VoltronSelected": "voltron (default) selected.",
     "WishListNotes": "Wish List Notes: {{notes}}"
   },
   "no-space": "",
