--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1333,7 +1333,9 @@
     "UpdateExternalSource": "Update Wish List Source",
     "Voltron": "voltron (default)",
     "VoltronDescription": "voltron is an auto-updated collection of PvE and PvP wish list rolls from across the Destiny community. We ship with this by default.",
-    "WishListNotes": "Wish List Notes: {{notes}}"
+    "WishListNotes": "Wish List Notes: {{notes}}",
+    "WorstRatedTip": "This perk exactly matches a weapon roll on your trashlist.",
+    "WorstRatedTip_plural": "These perks exactly match a weapon roll on your trashlist."
   },
   "no-space": "",
   "wrong-level": ""
