Ignore selected stat mods when auto stat mods are on
Fixes #8733

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -571,6 +571,7 @@
     "ConfirmOverwrite": "Are you sure you want to replace the armor in the loadout \"{{name}}\" with this new set of armor?",
     "CopiedBuild": "Copied build settings URL to clipboard",
     "CreateLoadout": "Save Loadout",
+    "DisabledByAutoStatMods": "Stat mods are being chosen automatically by Loadout Optimizer.",
     "DisabledDueToMaintenance": "The Loadout Optimizer is currently disabled due to Bungie API maintenance.",
     "EquipItems": "Equip",
     "ExcludeItem": "Exclude Item",
