Added Elements to i18n.json Added Check for harmonic mods Added Text replacement with translations for harmonic mods

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -129,6 +129,11 @@
     "Cancel": "Cancel",
     "OK": "OK"
   },
+  "Element": {
+    "Arc": "Arc",
+    "Harmonic": "Harmonic",
+    "SubclassMatching": "sublass matching elemental"
+  },
   "EnergyMeter": {
     "Energy": "Energy",
     "Unused": "Unused",
