Add Empty Fragment Slots loadout filter pill

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -659,6 +659,7 @@
     "DimLoadouts": "DIM Loadouts",
     "Edit": "Edit Loadout",
     "EditBrief": "Edit",
+    "EmptyFragmentSlots": "Empty Fragment Slots",
     "EquipInGameLoadout": "Equipping in-game loadout",
     "EquipItems": "Equipping items",
     "EquippableDifferent1": "Multiple Exotic items were used to calculate your Maximum Power, so the number shown may not be achievable when equipping your items in-game.",
@@ -786,6 +787,7 @@
     "SubclassOptionsSearch": "Search {{subclass}} options",
     "Succeeded": "Loadout succeeded",
     "SyncFromEquipped": "Sync from equipped",
+    "TooManyFragments": "Too Many Fragments",
     "TooManyRequested": "You have {{total}} {{itemname}} but your loadout asks for {{requested}}. We transferred all you had.",
     "UnassignedModError": "Mod didn't fit on your current armor",
     "Undo": "Undo",
