Include page name in tab title

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -27,6 +27,7 @@
     "WeeklyHeroic": "Weekly Heroic Strike"
   },
   "Armory": {
+    "Armory": "Armory",
     "NoNotes": "No Notes",
     "OpenInArmory": "view in Armory",
     "Season": "Season {{season}}, Year {{year}}",
