Fix light glyph source

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -347,6 +347,7 @@
     "Gilded": "Gilded",
     "Harmonic": "Harmonic",
     "HiveSword": "Hive Sword",
+    "LightLevel": "Light Level",
     "Misadventure": "Misadventure",
     "Missing": "Missing",
     "OpenSymbolsPicker": "Open Symbols Picker",
