--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1068,7 +1068,8 @@
     "SortCustom": "Custom Sort",
     "SortName": "Name",
     "SpacesSize": "{{count}} space",
-    "SpacesSize_plural": "{{count}} spaces"
+    "SpacesSize_plural": "{{count}} spaces",
+    "Theme": "Theme"
   },
   "Sockets": {
     "ApplyPerks": "Apply Perks",
