--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1264,7 +1264,7 @@
     "GildingTriumph": "Gilding Triumph",
     "HideCompleted": "Hide completed triumphs",
     "RevealRedacted": "Reveal redacted triumphs",
-    "SortRecords": "Sort triumphs"
+    "SortRecords": "Sort triumphs by completion"
   },
   "Vendors": {
     "Collections": "Collections",
