Enhance Randomize button in Loadouts dropdown

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -745,11 +745,10 @@
     "Random": "Random",
     "Randomize": "Randomize Loadout",
     "RandomizeButton": "Randomize",
-    "RandomizePrompt": "Randomize your equipped weapons, armor and ghost?",
+    "RandomizeNew": "Create Random",
     "RandomizeQueryHint": "Tip: Search for items first to restrict what items can be randomly chosen.",
     "RandomizeSearch": "Randomize from Search",
     "RandomizeSearchPrompt": "Randomize your equipped items from search \"{{query}}\"?",
-    "RandomizeWeapons": "Randomize your equipped weapons?",
     "Redo": "Redo",
     "RestoreAllItems": "All Items",
     "Save": "Save",
@@ -794,8 +793,7 @@
     "UnassignedModError": "Mod didn't fit on your current armor",
     "Undo": "Undo",
     "Update": "Save Changes",
-    "VendorsCannotEquip": "You don't have these items. Tap to pick a replacement or click the X to remove:",
-    "WeaponsOnly": "Weapons Only"
+    "VendorsCannotEquip": "You don't have these items. Tap to pick a replacement or click the X to remove:"
   },
   "Manifest": {
     "Download": "Downloading latest Destiny info database from Bungie...",
