Edit loadout identifiers

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -419,6 +419,7 @@
     "PrepareEquip": "Prepare Equip",
     "Replace": "Replace Loadout {{index}}",
     "Save": "Update Loadout",
+    "SaveIdentifiers": "Update Identifiers",
     "SnapshotFailed": "Failed to snapshot equipped loadout"
   },
   "Infusion": {
