Add Hide Silver items toggle to Vendors page

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1270,6 +1270,7 @@
     "Collections": "Collections",
     "Engram": "Reward Engram",
     "FilterToUnacquired": "Only show uncollected items",
+    "HideSilverItems": "Hide Silver items",
     "NoItems": "This Vendor is currently not offering any items.",
     "RefreshTime": "Inventory refreshes in:",
     "Vendors": "Vendors"
