Proper ornaments separation by class

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -991,7 +991,9 @@
     "RecordBooks": "Record Books"
   },
   "Records": {
-    "Title": "Records"
+    "Title": "Records",
+    "UniversalOrnamentSetOther": "Other",
+    "UniversalOrnaments": "Universal Ornaments"
   },
   "SearchHistory": {
     "Date": "Last Used",
