Add search filter integration, review feedback

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -992,8 +992,7 @@
   },
   "Records": {
     "Title": "Records",
-    "UniversalOrnamentSetOther": "Other",
-    "UniversalOrnaments": "Universal Ornaments"
+    "UniversalOrnamentSetOther": "Other"
   },
   "SearchHistory": {
     "Date": "Last Used",
