Group loadouts by season when sorting by edit time

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -762,6 +762,7 @@
       "NoName": "The loadout needs a name."
     },
     "SaveLoadout": "Save Loadout",
+    "Season": "Season {{season}}",
     "Share": {
       "Copied": "Copied loadout link to clipboard",
       "CopyButton": "Copy Link",
