Turn sheet close button into a real button

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -325,6 +325,7 @@
   },
   "General": {
     "ClickForDetails": "Click for details",
+    "Close": "Close",
     "Confirm": "Confirm?",
     "UserGuideLink": "User guide"
   },
