--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -234,6 +234,7 @@
     "Focusable": "Shows items that can be focused at a vendor",
     "Foundry": "Shows items by which foundry created them.",
     "Glimmer": "Shows items that are consumables that are related to gaining glimmer.",
+    "Harrowed": "\\(Harrowed\\)",
     "HasNotes": "Show items that have notes applied.",
     "HasOrnament": "Shows items that have an ornament applied.",
     "HasShader": "Shows items that have a shader applied.",
