--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1054,6 +1054,7 @@
     "ReverseSort": "Toggle forward/reverse sort",
     "SetSort": "Sort items by:",
     "SetVaultGrouping": "Group vault items by:",
+    "SetVaultGroupingDisplay": "Vault grouping display:",
     "Settings": "Settings",
     "ShowNewItems": "Show a red dot on new items",
     "SingleCharacter": "Single-Character View",
@@ -1078,6 +1079,8 @@
     "SpacesSize": "{{count}} space",
     "SpacesSize_plural": "{{count}} spaces",
     "Theme": "Theme",
+    "VaultGroupingDisplayFit": "Best Fit",
+    "VaultGroupingDisplaySeparated": "Separated",
     "VaultGroupingNone": "None"
   },
   "Sockets": {
