Rename vault weapon grouping

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -1053,7 +1053,7 @@
     "ResetToDefault": "Reset",
     "ReverseSort": "Toggle forward/reverse sort",
     "SetSort": "Sort items by:",
-    "SetVaultGrouping": "Group vault items by:",
+    "SetVaultWeaponGrouping": "Group vault weapons by:",
     "Settings": "Settings",
     "ShowNewItems": "Show a red dot on new items",
     "SingleCharacter": "Single-Character View",
