--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -573,6 +573,7 @@
     "CompareLoadout": "Compare Loadout",
     "ConfirmOverwrite": "Are you sure you want to replace the armor in the loadout \"{{name}}\" with this new set of armor?",
     "CreateLoadout": "Save Loadout",
+    "DecreaseStatPriority": "Decrease stat priority",
     "DisabledByAutoStatMods": "Stat mods are being chosen automatically by Loadout Optimizer.",
     "DisabledDueToMaintenance": "The Loadout Optimizer is currently disabled due to Bungie API maintenance.",
     "EquipItems": "Equip",
@@ -580,10 +581,13 @@
     "ExistingLoadout": "Existing Loadout",
     "ExoticSpecialCategory": "Special",
     "Filter": "Filters",
+    "IgnoreStat": "Ignore this stat - Loadout Optimizer will pretend this stat doesn't exist when building sets",
     "IncludeVendorItems": "Include Vendor items",
+    "IncreaseStatPriority": "Increase stat priority",
     "Legendary": "Legendary",
     "LockEquipped": "Pin equipped",
     "LockItem": "Pin item",
+    "LockStat": "Only include loadouts with exactly this stat tier",
     "MaxTier": "Max {{tier}}",
     "MissingClass": "Build is for: {{className}}",
     "MissingClassDescription": "The build you're trying to view is for a character class you don't have.",
