--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -632,6 +632,7 @@
     "EquipItems": "Equip",
     "ExcludeItem": "Exclude Item",
     "ExistingLoadout": "Existing Loadout",
+    "Exotic": "Exotic Armor",
     "ExoticSpecialCategory": "Special",
     "Filter": "Filters",
     "IgnoreStat": "If unchecked, Loadout Optimizer will pretend this stat doesn't exist when building sets",
@@ -663,6 +664,8 @@
     },
     "NoExotic": "No Exotic",
     "NoExoticDescription": "Equivalent to searching \"not:exotic\" in the search bar - no exotic armor will be included in sets.",
+    "NoExoticPreference": "No Preference",
+    "NoExoticPreferenceDescription": "Sets will include exotic armor if it improves stats.",
     "NoLoadoutsToCompare": "No loadouts to compare",
     "None": "None",
     "OptimizerExplanationGuide": "Read the User Guide for more info and a video tutorial.",
