More concise assume masterwork text

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -614,11 +614,11 @@
     "All": "All",
     "AnyExotic": "Any Exotic",
     "AnyExoticDescription": "Sets must contain an exotic, but any exotic will do.",
-    "AssumeMasterwork": "Assume Masterworked Energy & Stats",
+    "AssumeMasterwork": "Assume Masterwork",
     "AssumeMasterworkOptions": {
-      "All": "All armor will use masterworked stats and will have an energy level of 10.",
-      "Legendary": "Legendary armor will use masterworked stats and will have an energy level of 10. Exotic armor will use its current stats and will have a minimum energy level of {{minLoItemEnergy}}.",
-      "None": "All armor will use its current stats and will have a minimum energy level of {{minLoItemEnergy}}."
+      "All": "All armor: $t(LoadoutBuilder.AssumeMasterworkOptions.Masterworked)",
+      "Legendary": "Legendary: $t(LoadoutBuilder.AssumeMasterworkOptions.Masterworked)\nExotic: $t(LoadoutBuilder.AssumeMasterworkOptions.Current)",
+      "None": "All armor: $t(LoadoutBuilder.AssumeMasterworkOptions.Current)"
     },
     "AutoStatMods": "Automatically add stat mods",
     "AutomaticallyPicked": "This mod was added automatically to improve build stats.",
