Add is:vendor search

--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -317,6 +317,7 @@
     "UnlockAllFailed": "Failed to unlock items",
     "UnlockAllSuccess": "Unlocked {{num}} items",
     "Vendor": "Item is available from a specific vendor.",
+    "VendorItem": "Item is from a vendor, not in your inventory. Useful for excluding vendor items from Loadout Optimizer.",
     "Weapon": "Shows items that are weapons.",
     "WeaponLevel": "Shows weapons based on their Weapon Level.",
     "WeaponType": "Shows weapons based on their weapon type.",
