--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -777,9 +777,11 @@
       "InvalidModsDesc": "1 mod cannot fit into any armor piece.",
       "InvalidModsDesc_plural": "{{count}} mods cannot fit into any armor piece.",
       "ModPlacement": "Mod Placement",
+      "StackableMod": "Stackable",
       "UnassignedMods": "Unassigned Mods",
       "UnassignedModsDesc": "1 mod did not fit due to insufficient energy capacity or mod slots. Energy upgrades to the selected armor will not fix the issue.",
       "UnassignedModsDesc_plural": "{{count}} mods did not fit due to insufficient energy capacity or mod slots. Energy upgrades to the selected armor will not fix the issue.",
+      "UnstackableMod": "Not Stackable",
       "UpgradeCosts": "Upgrade Costs",
       "UpgradeCostsDesc": "Some armor needs energy capacity upgrades to fit the requested mods. In total, these upgrades cost:"
     },
