--- a/src/locale/en.json
+++ b/src/locale/en.json
@@ -631,12 +631,12 @@
     "ChooseAlternateTitle": "Choose another item",
     "CompareLoadout": "Compare Loadout",
     "ConfirmOverwrite": "Are you sure you want to replace the armor in the loadout \"{{name}}\" with this new set of armor?",
-    "CreateLoadout": "Save Loadout",
     "DecreaseStatPriority": "Decrease stat priority",
     "DisabledByAutoStatMods": "Stat mods are being chosen automatically by Loadout Optimizer.",
     "DisabledDueToMaintenance": "The Loadout Optimizer is currently disabled due to Bungie API maintenance.",
     "EquipItems": "Equip",
     "ExcludeItem": "Exclude Item",
+    "ExcludedItems": "Excluded Items",
     "ExistingLoadout": "Existing Loadout",
     "Exotic": "Exotic Armor",
     "ExoticSpecialCategory": "Special",
@@ -644,7 +644,6 @@
     "IgnoreStat": "If unchecked, Loadout Optimizer will pretend this stat doesn't exist when building sets",
     "IncreaseStatPriority": "Increase stat priority",
     "Legendary": "Legendary",
-    "LockEquipped": "Pin equipped",
     "LockItem": "Pin item",
     "MissingClass": "Build is for: {{className}}",
     "MissingClassDescription": "The build you're trying to view is for a character class you don't have.",
@@ -677,6 +676,7 @@
     "OptimizerExplanationSearch": "Use the search bar to narrow down which armor to consider. If no armor matches the search in a slot, all armor in that slot will be considered.",
     "OptimizerExplanationStats": "Drag the most important stats to the top, and disable stats you don't want to optimize for.",
     "OptimizerSet": "Optimizer Set",
+    "PinnedItems": "Pinned Items",
     "ProcessingSets": "Finding highest tier sets...",
     "SaveAs": "Save as",
     "SpeedReport": "Generated {{combos, number}} combinations in {{time}} seconds",
@@ -857,6 +857,7 @@
     "UnassignedModError": "Mod didn't fit on your current armor",
     "Undo": "Undo",
     "Update": "Save Changes",
+    "UpdateLoadout": "Update Loadout",
     "VendorsCannotEquip": "You don't have these items. Tap to pick a replacement or click the X to remove:"
   },
   "Manifest": {
